PFRC-12: Upgrade to JDK 21 Temurin